# pt5

./: .envrc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release-gui.yaml
src/pt5_handler/: ncp_model.py  ncp_to_pt5.py  pt5_model.py
test/: conftest.py  test_ncp_model.py  test_ncp_to_pt5.py
test/__snapshots__/: test_ncp_to_pt5.ambr
test/fixtures/: simple.ncp
