[project]
name = "pt5-handler"
version = "0.1.0"
description = "Set of functions related to the PT5 G Code dialect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "syrupy>=5.0.0",
]

[tool.pytest]
minversion = "9.0"
pythonpath = ["test", "src"]
testpaths = ["test"]
