[project]
name = "pt5"
version = "0.1.0"
description = "Set of functions related to the PT5 G Code dialect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "syrupy>=5.0.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]
line-length = 120
lint.select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "PERF", # perflint
    "PIE",
    "PLR0402", # prevent unnecessary manual import aliases
    "PLR1711", # prevent useless returns
    "SIM",
    "UP",
    "W", # pycodestyle warnings
    "D417", # undocumented-param
]
lint.ignore = [
    # rules recommended to be ignored when using ruff format
    "E501",
    "W191",
    # ignore the rule, because it presents non-zero perf cost
    "SIM105",
]
target-version = "py313"

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
pt5-core = { workspace = true }
pt5-gui = { workspace = true }
